# infrahub-skills

./: .gitignore  .markdownlint-cli2.yaml  .vale.ini  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eval.yaml  pyproject.toml  readme-rewrite-brief.md  tasks.py
.claude-plugin/: plugin.json
.claude-plugin/hooks/: detect-infrahub.md
.github/: .release-manifest.json  file-filters.yml  labeler.yml  labels.yml  release-drafter.yml  version-drafter.yml
.github/workflows/: auto-bump.yml  ci.yml  labeler.yml  labels.yml  release-drafter.yml  release.yml  skill-evals.yml  sync-docs.yml  version-sync.yml
.vale/styles/: spelling-exceptions.txt
dev/commands/: README.md
dev/guidelines/: README.md
dev/guides/: adding-a-rule.md  adding-a-skill.md  getting-started.md  running-evals.md
dev/knowledges/: architecture.md  (+2 more)
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
evaluations/: infrahub-analyzing-diagnostics.json  infrahub-auditing-repo.json  infrahub-collecting-diagnostics.json  infrahub-importing-data.json  infrahub-managing-checks.json  infrahub-managing-generators.json  infrahub-managing-menus.json  infrahub-managing-objects.json  infrahub-managing-schemas.json  infrahub-managing-transforms.json  infrahub-reporting-issues.json  managing-menus.json  managing-objects.json  managing-schemas.json  menu-creator.json  object-creator.json  schema-creator.json
hooks/: hooks.json
hooks-handlers/: session-start.sh
scripts/: grade_evals.py  object_creator_checks.py  run_evals.py  sync-evals.py  sync-versions.sh
(+585 files in other folders)
